스터디 week1 그리디, 정렬 문제풀이 commit